[package]
name = "uio"
version = "0.5.2"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Helper library for writing linux user-space drivers with UIO."
repository = "https://github.com/gz/rust-uio"
documentation = "https://docs.rs/uio/"
readme = "README.md"
keywords = ["driver", "pci", "linux", "generic", "hardware"]
license = "MIT"
edition = "2021"

[dependencies]
fs2 = "0.4.3"
nix = { version = "0.30", features = ["mman"] }
libc = "0.2"
