[package]
name = "uio"
version = "0.6.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Helper library for writing linux user-space drivers with UIO."
repository = "https://github.com/gz/rust-uio"
documentation = "https://docs.rs/uio/"
readme = "README.md"
keywords = ["driver", "pci", "linux", "generic", "hardware"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", optional = true }
fs2 = "0.4.3"
nix = { version = "0.30", features = ["mman"] }
libc = "0.2"
tokio = { version = "1", features = ["net"], optional = true }

[features]
default = []
async-tokio = ["dep:async-trait", "dep:tokio"]
